deploy/k8s/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: awesomerag
  namespace: awesomerag
spec:
  selector:
    app: awesomerag
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
