deploy/k8s/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awesomerag
  namespace: awesomerag
spec:
  ingressClassName: traefik
  rules:
    - host: awesomerag.nstsdc.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: awesomerag
                port:
                  number: 80
